force-app/main/default/objects/Signature_Audit__c/Signature_Audit__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail for all SF-eSign events. Records are insert-only; no edits or deletes are permitted.</description>
    <label>Signature Audit</label>
    <nameField>
        <displayFormat>AUD-{0000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signature Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>