force-app/main/default/objects/Signature_Audit__c/fields/Actor_Email__c.field-meta.xml
<CustomField>
    <fullName>Actor_Email__c</fullName>
    <description>Email of the person or system that triggered this event. For signer events this is the recipient email; for system events it is the source system identifier.</description>
    <label>Actor Email</label>
    <type>Email</type>
</CustomField>