force-app/main/default/objects/Signature_Audit__c/fields/Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>Event_Detail__c</fullName>
    <description>JSON payload with additional context for this event (e.g., error message, rate-limit counter, signature type chosen). Schema varies per Event_Type.</description>
    <label>Event Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>