force-app/main/default/objects/Signature_Audit__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <description>Server-side DateTime of the event. Always set in Apex using DateTime.now(); never accepted from client input.</description>
    <label>Event Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>