force-app/main/default/objects/Signature_Audit__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>Signer IP address from the Salesforce X-Salesforce-SIP header. Supports fraud investigation and geographic audit.</description>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>