force-app/main/default/objects/Signature_Audit__c/fields/Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request__c</fullName>
    <description>Master-Detail relationship to the parent Signature_Request__c. Deletion of parent cascades; audit records can never be reparented.</description>
    <label>Signature Request</label>
    <referenceTo>Signature_Request__c</referenceTo>
    <relationshipLabel>Signature Audit Events</relationshipLabel>
    <relationshipName>Signature_Audit_Events</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>