force-app/main/default/objects/Signature_Audit__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Identifies the integration point that triggered this event. Examples: DocGen, LWC, API, Site, Scheduler. Enables per-system usage reporting.</description>
    <label>Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>