force-app/main/default/objects/Signature_Audit__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Masked snapshot of the token used in this event (first 10 chars + ***). Full token is never stored in audit records to prevent credential exposure in logs.</description>
    <label>Token (Masked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>