force-app/main/default/objects/Signature_Audit__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <description>Browser/device User-Agent string at event time. Complements IP Address for device-fingerprint audit purposes.</description>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>